fix: header and footer spacing

--- a/_sass/_theme.scss
+++ b/_sass/_theme.scss
@@ -1,6 +1,5 @@
 body {
     display: block;
-    max-width: 1180px;
     margin-left: auto;
     margin-right: auto;
 }
