--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -19,18 +19,18 @@ html, body {
 img{
     max-width: 100%;
     max-height: 100%;
-    display: block; 
+    display: block;
 }
 
 #navbar {
-    // background-color: #333; /* Black background color */
-    position: fixed; /* Make it stick/fixed */
-    top: 0; /* Stay on top */
-    // width: 100%; /* Full width */
-    transition: top 0.3s; /* Transition effect when sliding down (and up) */
-    z-index: 100;
-  }
-  
+  position: fixed; /* Make it stick/fixed */
+  top: 0; /* Stay on top */
+  left: 0;
+  width: 100%; /* Full width */
+  transition: top 0.3s; /* Transition effect when sliding down (and up) */
+  z-index: 100;
+}
+
 /* Style the navbar links */
 #navbar a {
 float: left;
@@ -57,4 +57,4 @@ body {
     height: 100%;
     display: flex;
     flex-direction: column;
-  } 
+  }
